--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ judgment_files/
 chromedriver-linux64/
 chromedriver-linux64.zip
 *.old
+ca-certificates.crt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
